[gd_scene load_steps=44 format=3 uid="uid://b4mt5ivycteyy"]

[ext_resource type="Script" uid="uid://dkryjeytrtr41" path="res://Scripts/silent_knight_character_body_2d.gd" id="1_1l7ou"]
[ext_resource type="Texture2D" uid="uid://dp5o5e12w0uxa" path="res://Assets/Sprites/New Version/player-Sheet.png" id="2_h04xk"]
[ext_resource type="PackedScene" uid="uid://cgkhpp02r34fi" path="res://Scenes/state_machine_node.tscn" id="3_h04xk"]
[ext_resource type="Script" uid="uid://bptwmupi8krts" path="res://Scripts/States/SilentKnightStates/SilentKnightIdle.gd" id="4_y0sv7"]
[ext_resource type="Script" uid="uid://ciilhcbyj34eo" path="res://Scripts/States/SilentKnightStates/SilentKnightMove.gd" id="5_vn312"]
[ext_resource type="Script" uid="uid://d4cll4kq7idfu" path="res://Scripts/States/SilentKnightStates/SilentKnightJump.gd" id="6_sd0cb"]
[ext_resource type="Script" uid="uid://bigwm3ooumm0e" path="res://Scripts/States/SilentKnightStates/SilentKnightCrouch.gd" id="7_dfhla"]
[ext_resource type="Script" uid="uid://ej5h1bevix20" path="res://Scripts/States/SilentKnightStates/SilentKnightFall.gd" id="8_lm8ks"]
[ext_resource type="Script" uid="uid://b245u55ca42ky" path="res://Scripts/States/SilentKnightStates/SilentKnightSlash.gd" id="9_hopt6"]
[ext_resource type="Script" uid="uid://ditivl7qn6rmg" path="res://Scripts/States/SilentKnightStates/SilentKnightStab.gd" id="10_4b54u"]
[ext_resource type="Script" uid="uid://ctjnxttilp5vj" path="res://Scripts/States/SilentKnightStates/SilentKnightDamage.gd" id="11_uwcpc"]
[ext_resource type="Script" uid="uid://c27276hnycm22" path="res://Scripts/States/SilentKnightStates/SilentKnightDeath.gd" id="12_jabk5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1l7ou"]
atlas = ExtResource("2_h04xk")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h04xk"]
atlas = ExtResource("2_h04xk")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nvxx"]
atlas = ExtResource("2_h04xk")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0sv7"]
atlas = ExtResource("2_h04xk")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_403sl"]
atlas = ExtResource("2_h04xk")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sd0cb"]
atlas = ExtResource("2_h04xk")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfhla"]
atlas = ExtResource("2_h04xk")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lm8ks"]
atlas = ExtResource("2_h04xk")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hopt6"]
atlas = ExtResource("2_h04xk")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rr86q"]
atlas = ExtResource("2_h04xk")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1lfy5"]
atlas = ExtResource("2_h04xk")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4fhg1"]
atlas = ExtResource("2_h04xk")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1854q"]
atlas = ExtResource("2_h04xk")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_owaji"]
atlas = ExtResource("2_h04xk")
region = Rect2(128, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vn312"]
atlas = ExtResource("2_h04xk")
region = Rect2(0, 160, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_geofc"]
atlas = ExtResource("2_h04xk")
region = Rect2(32, 160, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2b5nh"]
atlas = ExtResource("2_h04xk")
region = Rect2(64, 160, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s17cb"]
atlas = ExtResource("2_h04xk")
region = Rect2(96, 160, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4g2f6"]
atlas = ExtResource("2_h04xk")
region = Rect2(64, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4b54u"]
atlas = ExtResource("2_h04xk")
region = Rect2(0, 160, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwcpc"]
atlas = ExtResource("2_h04xk")
region = Rect2(32, 160, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jabk5"]
atlas = ExtResource("2_h04xk")
region = Rect2(64, 160, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptepq"]
atlas = ExtResource("2_h04xk")
region = Rect2(96, 160, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xohy7"]
atlas = ExtResource("2_h04xk")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajyem"]
atlas = ExtResource("2_h04xk")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cb0ab"]
atlas = ExtResource("2_h04xk")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjd81"]
atlas = ExtResource("2_h04xk")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_poyqo"]
atlas = ExtResource("2_h04xk")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dejof"]
atlas = ExtResource("2_h04xk")
region = Rect2(64, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_owaji"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1l7ou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h04xk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nvxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0sv7")
}],
"loop": true,
"name": &"damage_animation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_403sl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sd0cb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfhla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lm8ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hopt6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rr86q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1lfy5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4fhg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1854q")
}],
"loop": true,
"name": &"death_animation",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_owaji")
}],
"loop": true,
"name": &"fall_animation",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vn312")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_geofc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2b5nh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s17cb")
}],
"loop": true,
"name": &"idle_animation",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4g2f6")
}],
"loop": true,
"name": &"jump_animation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4b54u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwcpc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jabk5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptepq")
}],
"loop": true,
"name": &"move_animation",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xohy7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajyem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cb0ab")
}],
"loop": true,
"name": &"slash_animation",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjd81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_poyqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dejof")
}],
"loop": true,
"name": &"stab_animation",
"speed": 3.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hygh2"]
radius = 4.0
height = 18.0

[node name="SilentKnight_CharacterBody2D" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_1l7ou")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -15)
sprite_frames = SubResource("SpriteFrames_owaji")
animation = &"damage_animation"
autoplay = "idle_animation"

[node name="LeftFacing_CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-7, -10)
shape = SubResource("CapsuleShape2D_hygh2")
debug_color = Color(0.96727043, 7.70092e-07, 0.47832793, 0.41960785)

[node name="RightFacing_CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(7, -10)
shape = SubResource("CapsuleShape2D_hygh2")
debug_color = Color(0.22461551, 0.509979, 1, 0.41960785)

[node name="StateMachine_Node" parent="." node_paths=PackedStringArray("initial_state") instance=ExtResource("3_h04xk")]
initial_state = NodePath("SilentKnightIdle")

[node name="SilentKnightIdle" type="Node" parent="StateMachine_Node" node_paths=PackedStringArray("player")]
script = ExtResource("4_y0sv7")
player = NodePath("../..")
metadata/_custom_type_script = "uid://bptwmupi8krts"

[node name="SilentKnightMove" type="Node" parent="StateMachine_Node" node_paths=PackedStringArray("player")]
script = ExtResource("5_vn312")
player = NodePath("../..")
metadata/_custom_type_script = "uid://ciilhcbyj34eo"

[node name="SilentKnightJump" type="Node" parent="StateMachine_Node" node_paths=PackedStringArray("player")]
script = ExtResource("6_sd0cb")
player = NodePath("../..")
metadata/_custom_type_script = "uid://d4cll4kq7idfu"

[node name="SilentKnightCrouch" type="Node" parent="StateMachine_Node" node_paths=PackedStringArray("player")]
script = ExtResource("7_dfhla")
player = NodePath("../..")
metadata/_custom_type_script = "uid://bigwm3ooumm0e"

[node name="SilentKnightFall" type="Node" parent="StateMachine_Node" node_paths=PackedStringArray("player")]
script = ExtResource("8_lm8ks")
player = NodePath("../..")
metadata/_custom_type_script = "uid://ej5h1bevix20"

[node name="SilentKnightSlash" type="Node" parent="StateMachine_Node" node_paths=PackedStringArray("player")]
script = ExtResource("9_hopt6")
player = NodePath("../..")
metadata/_custom_type_script = "uid://b245u55ca42ky"

[node name="SilentKnightStab" type="Node" parent="StateMachine_Node" node_paths=PackedStringArray("player")]
script = ExtResource("10_4b54u")
player = NodePath("../..")
metadata/_custom_type_script = "uid://ditivl7qn6rmg"

[node name="SilentKnightDamage" type="Node" parent="StateMachine_Node" node_paths=PackedStringArray("player")]
script = ExtResource("11_uwcpc")
player = NodePath("../..")
metadata/_custom_type_script = "uid://ctjnxttilp5vj"

[node name="SilentKnightDeath" type="Node" parent="StateMachine_Node" node_paths=PackedStringArray("player")]
script = ExtResource("12_jabk5")
player = NodePath("../..")
metadata/_custom_type_script = "uid://c27276hnycm22"
